# Agent2Agent-A2A-protocol

./: README.md  convolutional-neural-network.ipynb
a2a-project/: README.md  pyproject.toml  requirements.txt
a2a-project/elon_agent/: agent.py
a2a-project/elon_agent/.adk/: session.db
a2a-project/jeff_agent/: __main__.py  agent.py
a2a-project/jeff_agent/.adk/jeff_agent/: agent_executor.py  tools.py
a2a-project/jeff_agent/.adk/jeff_agent/.adk/: session.db
a2a-project/mark_agent/: agent.py  agent_executor.py  pyproject.toml  tools.py
a2a-workflow/: README.md  pyproject.toml
a2a-workflow/dummy_agent/: __main__.py  agent_executor.py  client.py
