[project]
name = "a2a-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.11",
    "crewai[google-genai]>=1.4.1",
    "google-adk>=1.25.0",
    "httpx>=0.27.0",
    "langchain>=1.2.10",
    "langchain-core>=0.3.0",
    "langchain-groq>=1.1.2",
    "langgraph>=0.2.0",
    "litellm>=1.81.13",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30.0",
]
